Fri Oct 29 14:33:33 UTC 2010  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_g++_common.GNU:
          Removed GCC 2.x support.

Thu Oct 28 17:45:10 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/INET_Addr.cpp (set): Corrected ACE_HAS_IPV6 checks made in
          Wed Oct 27 22:16:12 UTC 2010  Steve Huston  <shuston@riverace.com>.

Thu Oct 28 11:40:01 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * bin/make_release.py:
          Fixed incorrect spelling of DANCE.

Thu Oct 28 11:18:12 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/make_release.py:
          Fixed generation of dsc file

Thu Oct 28 07:38:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Array_Map.h:
        * ace/Array_Map.cpp:
        * ace/Auto_Functor.h:
        * ace/Auto_Functor.inl:
        * ace/Value_Ptr.h:
        * ace/config-g++-common.h:
        * ace/config-win32-msvc-8.h:
        * performance-tests/Misc/test_singleton.cpp:
          Cleanup because GCC < 3 isn't supported anymore

        * include/makeinclude/platform_hpux_aCC.GNU:
          aCC 3.31 isn't supported anymore for a long time

Thu Oct 28 07:08:00 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/APG/Logging/Trace_Return.cpp:
        * examples/APG/Logging/Wrap_Macros.cpp:
          Fixed compile errors

Wed Oct 27 22:16:12 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/INET_Addr.cpp (set): When looking up a hostname, always use
          gethostbyname() for IPv4 requests, even if IPv6 is available.
          getaddrinfo() (used when IPv4 and 6 are both available) is hugely
          slower than gethostbyname() in large vlan environments. Note that
          even though gethostbyname() can grok IPv6 on Linux, it can't
          anywhere else, so I avoided trying to go that route.

Wed Oct 27 19:35:09 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/libace-5.8.3.docs: