@@ -1,3 +1,8 @@
+Sat Oct 30 10:09:47 UTC 2010  Olli Savia  <ops@iki.fi>
+
+        * ace/config-linux-common.h:
+          Removed some legacy settings.
+
 Fri Oct 29 14:33:33 UTC 2010  Olli Savia  <ops@iki.fi>
 
         * include/makeinclude/platform_g++_common.GNU:
